# lora-scrnaseq-cell-type-annotation

./: .gitignore  01_dataprep.py  02_finetune.ipynb  README.md  pyproject.toml
data/: examples_1_test.jsonl  examples_1_train.jsonl  examples_1_val.jsonl  examples_2_test.jsonl  examples_2_train.jsonl  examples_2_val.jsonl  examples_3_test.jsonl  examples_3_train.jsonl  examples_3_val.jsonl
notebooks/: eda.qmd
