[project]
name = "lora-scrnaseq-cell-type-annotation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.13.1",
    "scanpy>=1.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "typing-extensions>=4.16.0",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "igraph>=1.0.0",
    "polars>=1.42.1",
    "great-tables>=0.22.0",
    "plotnine>=0.15.7",
    "pyarrow>=25.0.0",
]
